Fixed issues with logical corpora not persisting correctly, removed deprecated ui elements, temporary files cleanup on startup